feat(frontend): add frontend (#114)
* 把json的参数从service改为funcitonName

* 把endpoint，query的service改为function_name

* 更新openapi文档

* 初始化

* login

* 登录注册的接口调用

* 部署函数的表单提交和接口调用

* 对齐接口，调整转发

* 能够列出函数，删除函数和更新函数

* 更新说明

* 加入tailwindcss，完成调用逻辑

* 加入防抖

* 登录登出

* 重构为tsx，增加文档

* 重写ui

* 删除backup

* fmt

* 合并文档
